Made custom cells work by manually editing MainMenu.xib

--- a/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
+++ b/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
@@ -726,23 +726,6 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNK-Gt-boP" customClass="MLMRangeLevelIndicator">
-                        <rect key="frame" x="153" y="105" width="316" height="16"/>
-                        <animations/>
-                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="ghu-aE-58H"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="midColor">
-                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                        <connections>
-                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="variationSensitivity.absMaxValue" id="RVX-f0-JbK"/>
-                            <binding destination="m76-w1-MMv" name="minValue" keyPath="variationSensitivity.absMinValue" previousBinding="RVX-f0-JbK" id="EVf-Xb-x0p"/>
-                            <binding destination="m76-w1-MMv" name="value" keyPath="variationSensitivity.curValue" previousBinding="EVf-Xb-x0p" id="E4i-AX-vIh"/>
-                            <binding destination="m76-w1-MMv" name="criticalValue" keyPath="variationSensitivity.maxValue" id="VMM-Te-BzL"/>
-                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="variationSensitivity.minValue" previousBinding="VMM-Te-BzL" id="kuJ-N4-kfF"/>
-                        </connections>
-                    </levelIndicator>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AoN-P6-ZEi">
                         <rect key="frame" x="18" y="106" width="128" height="17"/>
                         <animations/>
@@ -763,23 +746,6 @@
                             <action selector="resetLightLevel:" target="m76-w1-MMv" id="5DC-UT-NPN"/>
                         </connections>
                     </button>
-                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="srS-UP-MYT" customClass="MLMRangeLevelIndicator">
-                        <rect key="frame" x="153" y="47" width="316" height="16"/>
-                        <animations/>
-                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="B0z-Rc-Bgm"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="midColor">
-                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                        <connections>
-                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="variationFrequency.absMaxValue" id="glz-TM-j5S"/>
-                            <binding destination="m76-w1-MMv" name="minValue" keyPath="variationFrequency.absMinValue" previousBinding="glz-TM-j5S" id="Hpb-5O-Iwm"/>
-                            <binding destination="m76-w1-MMv" name="value" keyPath="variationFrequency.curValue" previousBinding="Hpb-5O-Iwm" id="2xG-Vc-UKN"/>
-                            <binding destination="m76-w1-MMv" name="criticalValue" keyPath="variationFrequency.maxValue" id="kcs-BO-6DA"/>
-                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="variationFrequency.minValue" previousBinding="kcs-BO-6DA" id="i9S-Iw-yBU"/>
-                        </connections>
-                    </levelIndicator>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vES-07-JRh">
                         <rect key="frame" x="18" y="48" width="129" height="17"/>
                         <animations/>
@@ -934,10 +900,10 @@
                             <binding destination="m76-w1-MMv" name="warningValue" keyPath="audioLevel.minValue" previousBinding="So3-a0-y2Q" id="0lD-2I-R5S"/>
                         </connections>
                     </levelIndicator>
-                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uYb-ZU-GwV" customClass="MLM3ColorLevelIndicator">
+                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uYb-ZU-GwV" customClass="MLMRangeLevelIndicator">
                         <rect key="frame" x="153" y="166" width="316" height="16"/>
                         <animations/>
-                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="uzh-S8-CeZ"/>
+                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="uzh-S8-CeZ" customClass="MLMRangeLevelIndicatorCell"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="midColor">
                                 <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -946,10 +912,43 @@
                         <connections>
                             <binding destination="m76-w1-MMv" name="maxValue" keyPath="lightLevel.absMaxValue" id="nbm-7S-FvA"/>
                             <binding destination="m76-w1-MMv" name="minValue" keyPath="lightLevel.absMinValue" previousBinding="nbm-7S-FvA" id="ucw-62-7uJ"/>
-                            <binding destination="m76-w1-MMv" name="toolTip" keyPath="lightLevel.curValue" previousBinding="C3g-6C-XlK" id="FYU-wy-kbq"/>
                             <binding destination="m76-w1-MMv" name="value" keyPath="lightLevel.curValue" previousBinding="ucw-62-7uJ" id="WAY-2m-OAC"/>
                             <binding destination="m76-w1-MMv" name="criticalValue" keyPath="lightLevel.maxValue" id="C3g-6C-XlK"/>
-                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="lightLevel.minValue" previousBinding="FYU-wy-kbq" id="Wwq-R8-hb4"/>
+                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="lightLevel.minValue" previousBinding="C3g-6C-XlK" id="ebd-gt-fJL"/>
+                        </connections>
+                    </levelIndicator>
+                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="srS-UP-MYT" customClass="MLMRangeLevelIndicator">
+                        <rect key="frame" x="153" y="47" width="316" height="16"/>
+                        <animations/>
+                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="B0z-Rc-Bgm" customClass="MLMRangeLevelIndicatorCell"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="midColor">
+                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="variationFrequency.absMaxValue" id="glz-TM-j5S"/>
+                            <binding destination="m76-w1-MMv" name="minValue" keyPath="variationFrequency.absMinValue" previousBinding="glz-TM-j5S" id="Hpb-5O-Iwm"/>
+                            <binding destination="m76-w1-MMv" name="value" keyPath="variationFrequency.curValue" previousBinding="Hpb-5O-Iwm" id="2xG-Vc-UKN"/>
+                            <binding destination="m76-w1-MMv" name="criticalValue" keyPath="variationFrequency.maxValue" id="kcs-BO-6DA"/>
+                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="variationFrequency.minValue" previousBinding="kcs-BO-6DA" id="i9S-Iw-yBU"/>
+                        </connections>
+                    </levelIndicator>
+                    <levelIndicator verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNK-Gt-boP" customClass="MLMRangeLevelIndicator">
+                        <rect key="frame" x="153" y="106" width="316" height="16"/>
+                        <animations/>
+                        <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="ghu-aE-58H" customClass="MLMRangeLevelIndicatorCell"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="midColor">
+                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <binding destination="m76-w1-MMv" name="maxValue" keyPath="variationSensitivity.absMaxValue" id="RVX-f0-JbK"/>
+                            <binding destination="m76-w1-MMv" name="minValue" keyPath="variationSensitivity.absMinValue" previousBinding="RVX-f0-JbK" id="EVf-Xb-x0p"/>
+                            <binding destination="m76-w1-MMv" name="value" keyPath="variationSensitivity.curValue" previousBinding="EVf-Xb-x0p" id="E4i-AX-vIh"/>
+                            <binding destination="m76-w1-MMv" name="criticalValue" keyPath="variationSensitivity.maxValue" id="VMM-Te-BzL"/>
+                            <binding destination="m76-w1-MMv" name="warningValue" keyPath="variationSensitivity.minValue" previousBinding="VMM-Te-BzL" id="kuJ-N4-kfF"/>
                         </connections>
                     </levelIndicator>
                 </subviews>
