Things seem to start to work

--- a/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
+++ b/OSXApplication/miclightmeter/miclightmeter/Base.lproj/MainMenu.xib
@@ -939,7 +939,10 @@
                         <animations/>
                         <levelIndicatorCell key="cell" alignment="left" doubleValue="2" maxValue="2" warningValue="2" criticalValue="2" levelIndicatorStyle="continuousCapacity" id="ghu-aE-58H" customClass="MLMRangeLevelIndicatorCell"/>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="midColor">
+                            <userDefinedRuntimeAttribute type="color" keyPath="leftColor">
+                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="rightColor">
                                 <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
